--- a/src/NuExt.System.Windows.csproj
+++ b/src/NuExt.System.Windows.csproj
@@ -10,11 +10,12 @@
     <Description>Provides miscellaneous Windows-specific extensions.
 
 Commonly Used Types:
+System.Diagnostics.BindingErrorTraceListener
 System.IO.IOUtils
 System.Windows.BindingProxy
 System.Windows.BindingProxy&lt;T&gt;
 System.Windows.WindowPlacement</Description>
-    <Version>0.1.0</Version>
+    <Version>0.1.1</Version>
     <RootNamespace />
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <NoWarn>$(NoWarn);1591</NoWarn>
@@ -39,7 +40,7 @@ System.Windows.WindowPlacement</Description>
   </ItemGroup>
 
   <ItemGroup Condition="'$(UseNuExtPackages)' == 'true'">
-    <PackageReference Include="NuExt.System" Version="0.1.1" />
+    <PackageReference Include="NuExt.System" Version="0.1.2" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(UseNuExtPackages)' == 'false'">
