--- a/src/NuExt.System.Windows.csproj
+++ b/src/NuExt.System.Windows.csproj
@@ -6,7 +6,7 @@
     <UseWPF>true</UseWPF>
     <ImplicitUsings>enable</ImplicitUsings>
 	<TreatWarningsAsErrors Condition="'$(Configuration)' == 'Release'">true</TreatWarningsAsErrors>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild Condition="'$(Configuration)' == 'Release'">true</GeneratePackageOnBuild>
     <PackageTags>nuext;extensions;windows;wpf;xaml;ui;async</PackageTags>
     <Description>Provides essential extensions and utilities for Windows application development with a focus on WPF.
 
@@ -17,7 +17,7 @@ System.Windows.BindingProxy
 System.Windows.BindingProxy&lt;T&gt;
 System.Windows.WindowPlacement
 System.Windows.IDragDrop</Description>
-    <Version>0.4.0</Version>
+    <Version>0.4.1</Version>
     <RootNamespace />
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <NoWarn>$(NoWarn);1591;NETSDK1233</NoWarn>
@@ -38,7 +38,7 @@ System.Windows.IDragDrop</Description>
   </ItemGroup>
 
   <ItemGroup Condition="'$(UseNuExtPackages)' == 'true'">
-    <PackageReference Include="NuExt.System" Version="0.4.0" />
+    <PackageReference Include="NuExt.System" Version="0.4.1" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(UseNuExtPackages)' == 'false'">
